<resources>
    <string name="app_name">Mobile Campus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mobile Campus</string>
    <string name="nav_header_subtitle">Bienvenido! </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_calendario">Calendario Académico</string>
    <string name="menu_bienestar">Actividades Bienestar</string>
    <string name="menu_creditos">Consulta de Créditos</string>
    <string name="menu_semilleros">Consulta de Semilleros</string>
    <string name="menu_horario">Consulta tu Horario</string>
    <string name="menu_about">About</string>
    <string name="menu_requisitos">Requisitos de Grado</string>
    <string name="menu_configuracion">Configuración</string>


    <string name="menu_todo">ToDo!</string>
    <string name="menu_calcular_nota">Calcula tu nota</string>


    <string name="bienvenido">¡BIENVENIDO!</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="to_do" />
    <string name="calendario_academico" />
    <string name="consulta_tu_horario" />
    <string name="todo" />
    <string name="calcula_nota" />
    <string name="log_out" />
    <string name="requisitos_de_grado" />
    <string name="_2do_corte">2do corte</string>

    <string name="group1">Paz y salvos</string>
    <string name="group2">Paz y salvo Registro y control</string>
    <string name="group3">Requisitos Adicionales</string>

    <string-array name="group1">
        <item>Paz y salvo académico</item>
        <item>Paz y salvo financiero</item>
        <item>Paz y salvo biblioteca</item>
        <item>Paz y salvo Centro de Medios Audiovisuales</item>
    </string-array>

    <string-array name="group2">
        <item>Pruebas Icfes</item>
        <item>Prueba saber-pro (ECAES)</item>
        <item>Diploma de bachiller o acta de grado</item>
        <item>Titulo SENA (Si aplica)</item>
        <item>Fotocopia cédula</item>
        <item>Fotocopia libreta militar para hombres (Ya no es un requisito necesario - Ver Ley 1738)</item>
    </string-array>

    <string-array name="group3">
        <item>Reconocimiento de créditos académicos (pensum actual)</item>
        <item>Requisito de inglés para los grados de profesional</item>
    </string-array>

    <string name="server_client_id"> 839358185985-9ufnq9ioc25l316b8upf19bm5jnsn151.apps.googleusercontent.com</string>
    
</resources>
