<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_date_range"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_bienestar"
            android:icon="@drawable/ic_sentiment_very_satisfied"
            android:title="@string/menu_bienestar" />
        <item
            android:id="@+id/nav_creditos"
            android:icon="@drawable/ic_equalizer"
            android:title="@string/menu_creditos" />
        <item
            android:id="@+id/nav_semilleros"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_semilleros" />
        <item
            android:id="@+id/nav_horario"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menu_horario" />
        <item
            android:id="@+id/nav_requisitos"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_requisitos" />
    </group>



    <item
        android:title="Funciones extra!"
        android:checkable="true">
        <group android:checkableBehavior="single">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_todo"
                android:icon="@drawable/ic_format_list_numbered"
                android:title="@string/menu_todo" />
            <item
                android:checkable="true"
                android:id="@+id/nav_calcular_nota"
                android:icon="@drawable/ic_star"
                android:title="@string/menu_calcular_nota" />
        </menu>
        </group>
    </item>


    <item android:title="Herramientas">

        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />


        </menu>

    </item>


</menu>
