<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-225dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/button_calendarioAcademico"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@color/azul_claro"
                android:drawableStart="@android:drawable/ic_menu_today"
                android:onClick="calendario"
                android:text="@string/calendario_academico"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <Button
                android:id="@+id/button_consultatodo"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:background="@color/rosado_poli"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:onClick="todo"
                android:text="@string/to_do"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_calendarioAcademico" />

            <Button
                android:id="@+id/button_calcularNota"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:background="@color/verde"
                android:drawableStart="@android:drawable/ic_menu_save"
                android:onClick="calcularNota"
                android:text="@string/calcula_nota"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_consultatodo" />

            <Button
                android:id="@+id/button_consultaHora"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:background="@color/amarillo_poli"
                android:drawableStart="@drawable/ic_date_range"
                android:onClick="horario"
                android:text="@string/consulta_tu_horario"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_calcularNota" />

            <Button
                android:id="@+id/button_requisitos"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:background="@color/azul_claro"
                android:onClick="requisitos"
                android:text="@string/requisitos_de_grado"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_consultaHora" />

            <Button
                android:id="@+id/button_logOut"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:background="@color/azul_claro"
                android:text="@string/log_out"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_requisitos" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_calendarioAcademico"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_poli" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>